Fix issue with logo jumping.

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -18,7 +18,8 @@
     }
 
     @media #{$large-up} {
-
+      position: fixed;
+      top: 6px;
     }
   }
 }
